Changed image host, renamed old files

--- a/Meeting_Notes/181018.md
+++ b/Meeting_Notes/181018.md
@@ -18,22 +18,22 @@ https://sentinels.copernicus.eu/web/sentinel/missions/sentinel-3/satellite-descr
 
 Below we have generated an image from a single channel, a false colour image, images overlayed the included cloud masks (empirical and bayesian), and images overlayed with only one of the bits for either the cloud mask. The coressponding code can be found here under Plotting_images_and_masks.py . 
 
-![pic1](/Images/S1_n.png)
+![pic1](https://i.imgur.com/wq042GJ.png)
 Figure 1: Northeastern Australia using channel S1
 
-![pic2](/Images/nothernaustralia_falsecolour.png)
+![pic2](https://i.imgur.com/TBI2O0x.png)
 Figure 2: False colour image of Northeastern Australia using channel S1, S2, S3 (S1=blue, S2=green, S3=red)
 
-![pic3](/Images/S1n_S3A_SL_1_RBT____20180404T190108_LN2_O_NT_003-(10.442133,-142.862277).png)
+![pic3](https://i.imgur.com/GX71Une.png)
 Figure 3: Pacific Ocean using channel S1.
 
-![pic4](/Images/Figure_1-1.png)
+![pic4](https://i.imgur.com/0KSuxBP.png)
 Figure 4: False colour image of Pacific Ocean using above technique
 
-![pic5](/Images/Figure_2.png)
+![pic5](https://i.imgur.com/lIThjB3.png)
 Figure 5: Pacific Ocean with summed bits from empirical cloud mask.
 
-![pic6](/Images/bitmasks.png)
+![pic6](https://i.imgur.com/Cx2jqCl.png)
 Figure 6: Pacific Ocean with various bits from empirical cloud mask. 
 
 
