--- a/Meeting_Notes/181023.md
+++ b/Meeting_Notes/181023.md
@@ -11,7 +11,7 @@ Work for next meeting:
 - get Pacific Ocean images to train 
 - adapt the model for satellite images
 
-<img src=/Images/doge.png width="75">
+<img src=https://i.imgur.com/MSNfZqj.png width="75">
  
 
 
