--- a/Meeting_Notes/181108.md
+++ b/Meeting_Notes/181108.md
@@ -25,7 +25,7 @@ The number of layers found in this column; cloud data products report (only) the
 
 Its distribution is shown in Image [pic2].
 
-![pic2](https://imperiallondon-my.sharepoint.com/personal/kt2015_ic_ac_uk/Documents/Images/NumLayers.png)
+![pic2](https://i.imgur.com/5FPEo2w.png)
 
 Currently using a dedicated program to read the files https://portal.hdfgroup.org/display/support/HDF+4.2.14 . Variables are referenced by their index and loaded as a string into python. The string format changes between products and variables. The string is then manipulated to form numpy arrays. In the second product type, the string implies that the data is in an (n, 3) shaped array. However, if this array is flattened, the time (Given in IAT), latitude and longitude are monotically increasing which implies that it is actually an (n, 1) shaped array.
 
@@ -33,4 +33,4 @@ Started to use CIS http://cistools.net/ to perform collocation. It uses python p
 
 CIS does not directly support the four products above, only CAL_LID_L2_05kmAPro. However the code can probably be adapted to accept the relevent ones. For initial testing, a few of the supported products were downloaded. CIS was used to produce basic plots on a map. Attempts were made at using the collocation function. The collocation function was run using default settings, however it failed to return anything after more than an hour of running.
 
-![pic1](https://drive.google.com/file/d/1PFyVdLtjgq7hBbfii-Q1P354ezFnipee/)
+![pic1](https://i.imgur.com/jNxPpUG.png)
