--- a/Meeting_Notes/181115.md
+++ b/Meeting_Notes/181115.md
@@ -10,15 +10,15 @@ Using the first 1km Calipso granule, we were able to identify a region which ove
 SLSTR time: 012743 - 013043
 Calipso time: 004828 - 005223  ** (+ 1 hour if using IAT converted time)
 
-![fig1](/Images/Collocation1.png)
+![fig1](https://i.imgur.com/z6JHO5b.png)
 Figure 1: Overlap region, Latitude/Longitude Plot. Blue = Calipso measurements, Orange = SLSTR measurements
 
 
 Once two overlapping files are loaded into Python, we can identify the pixels which correspond. Currently this is done by checking whether any pixels are within 250m latitude and 250m longitude of each other. Processing for each pair of files takes approximately 10 seconds.
-![fig2](/Images/FullCollcation1.png)
+![fig2](https://i.imgur.com/7Og5O0m.png)
 Figure 2: Elements of the 2D SLSTR data array which correspond to Calipso measurements
 
-![fig3](/Images/FullCollocation2.png)
+![fig3](https://i.imgur.com/V637e6v.png)
 Figure 3: Satellite position corresponding to collocated pixels, Latitude/Longitude Plot.
 
 
@@ -29,7 +29,7 @@ https://hdfeos.org/software/pyhdf.php
 Kenza translated the IDL file to translate the bitwise information into one hot encoding. She also fixed the CNN to for the 1km truth inputs. 
 
 
-![fig4](/Images/colourful_collocation.png)
+![fig4](https://i.imgur.com/dJKcvAP.png)
 Figure 4: CALIOP measurements superimposed on SLSTR S1 image (0 = no value, 1 = clear, 2 = cloud, 3 = aerosol, 4= stratospheric aerosol, 5 = surface, 6 = subsurface, 7 = undetermined) 
 
 
