--- a/Meeting_Notes/181210.md
+++ b/Meeting_Notes/181210.md
@@ -27,8 +27,8 @@ Things Kenza did this week:
 * Added ancillary data to the network ('satellite_zenith_angle', 'solar_zenith_angle', 'latitude_an', 'longitude_an', 'Feature_Classification_Flags') 
 
 * Run the code on whole images, slicing to look at accuracy as a function of time difference. The images below are only 0 to 200s. 
-<img src=/Images/mask1.png width="800"> 
-<img src=/Images/mask2.png width="800"> 
+<img src=https://i.imgur.com/PYgBw1F.png width="800"> 
+<img src=https://i.imgur.com/qZu1uBr.png width="800"> 
 
 * Investigated the upward slope in for the precision vs recall curve
   - Created by lack of data
