--- a/Meeting_Notes/181129.md
+++ b/Meeting_Notes/181129.md
@@ -37,7 +37,7 @@ Approximately 3 months of data has been processed so far, currently storing data
 
 We are running the data data TOm dowloaded into 6 layer feed-forward network with the 9 channels as inputs. We first tried to vary the threshhold for the time difference between the CALIOP and SLSTR pixels. The results are shown in the graph below. The accuracy of the network  seem to be a function of the time difference. The variations within the threshold ranges may come from the model not having enough data learn adaquately (<50'000 points) and lack of correlation between the cloudy pixels after a certain amount of time diminished. However, on short scales, more time does not always translate to much less correlation. For e.g. strong winds could make the scene change drastically.
 
-<img src=/Images/Time_difference_vs_accuracy2.png width="800">
+<img src=https://i.imgur.com/xLSQnEn.png width="800">
 Fig 1: Accuracy as a function of time difference. 
 
 &nbsp;  
@@ -45,12 +45,12 @@ Fig 1: Accuracy as a function of time difference.
 For a threshold of 250s we looked at the model evaulations I wrote for last time. The accuracy is 84%, area under the ROC curve is 0.91. Below are the graphs for the ROC curve, Precision vs. Recall curve and the table for the confusion matrix.
 
 
-<img src=/Images/ROC.png width="800">
+<img src=https://i.imgur.com/NIO8QaA.png width="800">
 Fig 2: ROC Curve for validation set (500 random points).
 
 &nbsp; 
 
-<img src=/Images/PvR.png width="800"> 
+<img src=https://i.imgur.com/ZcBe25o.png width="800"> 
 Fig 3: Precicion as a function of recall for validation set.
 
 &nbsp;
@@ -64,12 +64,12 @@ Table I: Confusion matrix of validation set.
 
 We repeated this process for the same time threshold but with dowloading almost twice as much data (which took over 6 hours to complete because the files wer non-existent on CEDA). The accuracy was 73%, area under the ROC curve is 0.79. Below are the graphs for the ROC curve, Precision vs. Recall curve and the table for the confusion matrix.
 
-<img src=/Images/ROClarge.png width="800"> 
+<img src=https://i.imgur.com/mQwj47d.png width="800"> 
 Fig 4: ROC Curve for larger training set.
 
 &nbsp;
 
-<img src=/Images/PvRlarge.png width="800"> 
+<img src=https://i.imgur.com/5aCpehv.png width="800"> 
 Fig 5: Precicion as a function of recall for larger training set.
 
 &nbsp;
@@ -85,7 +85,7 @@ Table II: Confusion matrix for larger training set.
 
 We also plotted the some test data (100 new points for a single test image) as a sanity check but also to see where the classifier was struglling. But this is prooving hard to do without an interactive environment 
 
-<img src=/Images/ploooot.png width="800">  
+<img src=https://i.imgur.com/akBbNDc.png width="800">  
 Fig 6: Test image 
 
 &nbsp;
