--- a/Meeting_Notes/190115.md
+++ b/Meeting_Notes/190115.md
@@ -4,7 +4,7 @@
 * added error bars 
 * integrated surface type data into model 
 
-![pic1](/Images/acc_stype_test.png)
+![pic1](https://i.imgur.com/CN9glgf.png)
 
 ### Tom’s completed actions
 * Updated to latest  satpy version
@@ -14,8 +14,8 @@
 * Restructured repo 
 * Added functionality to easily save / load models
 * Made functions to characterise saved pixels
-![coastlines](/Images/Coastlines.png)
-![PixelSpots](/Images/PixelSpots.png)
+![coastlines](https://i.imgur.com/NYiey86.png)
+![PixelSpots](https://i.imgur.com/12SDEeD.png)
 
 ### Common completed actions
 * update scripts for new satpy version 
