new buulet points

--- a/Meeting_Notes/190125.md
+++ b/Meeting_Notes/190125.md
@@ -3,11 +3,17 @@
 
 Completed tasks
 - new matched data (September, October December 2018 for Sentinel 3A and 3B, V3/4)
+- checked if it was possible to add new ancillary data: no.
 - new script editor for Kenza (VS Code), to avoid merge conflict and breaking each others code
 - ROC curves for surface types with bayesian model comparison (see below)
 - methodology for integrating textural information
 - stored images for markdowns in seperate drive
-- new class for models and easier storing/loading model functionality
+- new class for models 
+- easier storing/loading model functionality
 - Tom got tensorflow working on his GPU 
 - fixed Satpy bugs
 - new training/validation set seperation (training and validation on ≠ images)
+
+
+For next week: 
+- identify if low probability correlates with missclassification
