--- a/Meeting_Notes/190125.md
+++ b/Meeting_Notes/190125.md
@@ -13,7 +13,14 @@ Completed tasks
 - Tom got tensorflow working on his GPU 
 - fixed Satpy bugs
 - new training/validation set seperation (training and validation on ≠ images)
+- found that changing the threshold on the mask is not straightforward 
+
+![falsecolour](http://www.hep.ph.ic.ac.uk/~kt2015/FCI.png
+![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/Probability.png))
+![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart.png)
 
 
 For next week: 
 - identify if low probability correlates with missclassification
+- write the CNN
+
