--- a/Meeting_Notes/190125.md
+++ b/Meeting_Notes/190125.md
@@ -17,7 +17,7 @@ Completed tasks
 
 ![falsecolour](http://www.hep.ph.ic.ac.uk/~kt2015/FCI.png)
 ![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/Probability.png)
-![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart.png)
+<img src=(http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart.png width="400"> 
 
 
 For next week: 
