--- a/Meeting_Notes/190125.md
+++ b/Meeting_Notes/190125.md
@@ -1,7 +1,7 @@
 # Meeting 
 ## 25th January 2019
 
-Completed tasks
+Completed tasks:
 - new matched data (September, October December 2018 for Sentinel 3A and 3B, V3/4)
 - checked if it was possible to add new ancillary data: no.
 - new script editor for Kenza (VS Code), to avoid merge conflict and breaking each others code
@@ -17,8 +17,8 @@ Completed tasks
 
 ![falsecolour](http://www.hep.ph.ic.ac.uk/~kt2015/FCI.png)
 ![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/Probability.png)
-<img src=(http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart.png width="400"> 
 
+<img src=http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart.png width="400"> 
 
 For next week: 
 - identify if low probability correlates with missclassification
