--- a/190129.md
+++ b/190129.md
@@ -8,7 +8,7 @@ Completed actions:
 
 ![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/prob_vs_class.png)
 
-<img src=http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png width="400"> 
+![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png)
 
 Next week:
  - write functions do handle data for the CNN
