--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -1,5 +1,5 @@
-## Meeting 
-# 29th January 2019
+# Meeting 
+## 29th January 2019
 
 Completed actions:
 - found that the misidentified pixels are not centred on mid probabilities but increase with decreasing certainty
@@ -11,5 +11,5 @@ Completed actions:
 ![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png)
 
 Next week:
- - write functions do handle data for the CNN
+ - write functions to handle data for the CNN
  
