--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -8,7 +8,7 @@ Completed actions:
 
 ![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/prob_vs_class.png)
 
-![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2)
+![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png)
 
 Next week:
  - write functions to handle data for the CNN
