--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -6,9 +6,15 @@ Completed actions:
     - use low probability and surface type as criteria for using the cnn
 - wrote outline for CNN 
 
+Plot of ~3 million collocated pixels on each pole. Yellow represents a correct model prediction while purple represents an incorrect classification.
+
+![NorthPole](http://www.hep.ph.ic.ac.uk/~trz15/Npole1.png)
+
+![NorthPole](http://www.hep.ph.ic.ac.uk/~trz15/Spole.png)
+
 ![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/prob_vs_class.png)
 
-![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png)
+![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png?)
 
 Next week:
  - write functions to handle data for the CNN
