--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -2,8 +2,8 @@
 ## 29th January 2019
 
 Completed actions:
-- found that the misidentified pixels are not centred on mid probabilities but increase with decreasing certainty
-    - use low probability and surface type as criteria for using the cnn
+- found that the misidentified pixels are centred on mid probabilities (o.4-0.7)
+    - use this range (perhaps in combonation with poor performing surface type) as criteria for using the cnn
 - wrote outline for CNN 
 
 Plot of ~3 million collocated pixels on each pole. Yellow represents a correct model prediction while purple represents an incorrect classification.
@@ -18,4 +18,5 @@ Plot of ~3 million collocated pixels on each pole. Yellow represents a correct m
 
 Next week:
  - write functions to handle data for the CNN
+ - compare new model to old model 
  
