--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -12,7 +12,7 @@ Plot of ~3 million collocated pixels on each pole. Yellow represents a correct m
 
 ![NorthPole](http://www.hep.ph.ic.ac.uk/~trz15/Spole.png)
 
-![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/prob_vs_class.png)
+![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/pred_vs_certainty.png)
 
 ![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png?)
 
