--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -6,7 +6,7 @@ Completed actions:
     - use this range (perhaps in combonation with poor performing surface type) as criteria for using the cnn
 - wrote outline for CNN 
 
-Plot of ~3 million collocated pixels on each pole. Yellow represents a correct model prediction while purple represents an incorrect classification.
+Plot of ~3 million collocated pixels on each pole. Yellow represents a correct model prediction while purple represent an incorrect classification.
 
 ![NorthPole](http://www.hep.ph.ic.ac.uk/~trz15/Npole1.png)
 
