--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -2,11 +2,11 @@
 ## 29th January 2019
 
 Completed actions:
-- found that the misidentified pixels are centred on mid probabilities (o.4-0.7)
+- found that the misidentified pixels are centred on mid probabilities (0.4-0.7)
     - use this range (perhaps in combonation with poor performing surface type) as criteria for using the cnn
 - wrote outline for CNN 
 
-Plot of ~3 million collocated pixels on each pole. Yellow represents a correct model prediction while purple represent an incorrect classification.
+Plot of ~3 million collocated pixels on each pole. Yellow represents a correct model prediction while purple represents an incorrect classification.
 
 ![NorthPole](http://www.hep.ph.ic.ac.uk/~trz15/Npole1.png)
 
