--- a/Meeting_Notes/190129.md
+++ b/Meeting_Notes/190129.md
@@ -14,7 +14,7 @@ Plot of ~3 million collocated pixels on each pole. Yellow represents a correct m
 
 ![probabillity](http://www.hep.ph.ic.ac.uk/~kt2015/pred_vs_certainty.png)
 
-![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png?)
+![flowchart](http://www.hep.ph.ic.ac.uk/~kt2015/Flowchart2.png)
 
 Next week:
  - write functions to handle data for the CNN
