Updated to include bayesian and empirical information

--- a/Meeting_Notes/190204.md
+++ b/Meeting_Notes/190204.md
@@ -1,6 +1,7 @@
 # Meeting 
-## Tuesday 4th January 
+## Tuesday 4th February 
 
 Completed actions:
 - updated solar zenith angle and time difference tests for new formatting 
-- 
+- added empirical and bayesian mask to accuracy histogram
+- added empirical mask to surface type ROC curves 
