added more actions

--- a/Meeting_Notes/190204.md
+++ b/Meeting_Notes/190204.md
@@ -5,3 +5,7 @@ Completed actions:
 - updated solar zenith angle and time difference tests for new formatting 
 - added empirical and bayesian mask to accuracy histogram
 - added empirical mask to surface type ROC curves 
+- dowloaded contextual data information 
+- update data files to version 4.0
+
+
