--- a/Meeting_Notes/190125.md
+++ b/Meeting_Notes/190125.md
@@ -15,7 +15,7 @@ Completed tasks:
 - new training/validation set seperation (training and validation on ≠ images)
 - found that changing the threshold on the mask is not straightforward 
 
-![acc_stype_test](http://www.hep.ph.ic.ac.uk/~kt2015/acc_stype_test.png)
+![acc_stype_test](http://www.hep.ph.ic.ac.uk/~kt2015/acc_stype_test2.png)
 
 ![ROCsnow](http://www.hep.ph.ic.ac.uk/~kt2015/ROCsnow.png)
 ![ROCtwilight](http://www.hep.ph.ic.ac.uk/~kt2015/ROCtwilight.png)
