--- a/Meeting_Notes/190204.md
+++ b/Meeting_Notes/190204.md
@@ -3,17 +3,11 @@
 
 Completed actions:
 - updated solar zenith angle and time difference tests for new formatting 
-
-[acc_sza_test](http://www.hep.ph.ic.ac.uk/~kt2015/acc_sza_test.png)
-
-[acc_time_test](http://www.hep.ph.ic.ac.uk/~kt2015/acc_time_test.png)
-
 - added empirical and bayesian mask to accuracy histogram (see 190125.md)
 - added empirical mask to surface type ROC curves (see 190125.md)
 - dowloaded contextual data information 
 - update data files to version 4.0
 
 For next week:
-
+- Decide wheter to pad out cnn inputs
 - Train new model and apply to SLSTR data 
-- 
