--- a/Meeting_Notes/190204.md
+++ b/Meeting_Notes/190204.md
@@ -8,6 +8,8 @@ Completed actions:
 - dowloaded contextual data information 
 - update data files to version 4.0
 
+![sza](http://www.hep.ph.ic.ac.uk/~kt2015/sza.png)
+
 For next week:
 - Decide wheter to pad out cnn inputs
 - Train new model and apply to SLSTR data 
