Added additional information

--- a/Meeting_Notes/190204.md
+++ b/Meeting_Notes/190204.md
@@ -5,7 +5,22 @@ Completed actions:
 - updated solar zenith angle and time difference tests for new formatting 
 - added empirical and bayesian mask to accuracy histogram
 - added empirical mask to surface type ROC curves 
-- dowloaded contextual data information 
+- downloaded contextual data information 
 - update data files to version 4.0
+- Fixed python packages on HEP
+
+Removing NaN and outlier data improves accuracy of model from ~84% to ~86%
+
+![Tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard1.png)
+
+For the 3,405,785 pixels from 2018:
+- Orange: Model as of last week
+- Blue: Increased number of training steps
+- Red and Light Blue: Filtered out some of the data points
+- Green: Latest, filtered out all NaN values and added in 3 more months of data
 
 
+![Npole](http://www.hep.ph.ic.ac.uk/~trz15/Npole2.png)
+![Spole](http://www.hep.ph.ic.ac.uk/~trz15/Spole2.png)
+
+![Hist1](http://www.hep.ph.ic.ac.uk/~trz15/certainty_hist3.png)
