added surface type information from caroline

--- a/Meeting_Notes/190205.md
+++ b/Meeting_Notes/190205.md
@@ -1,7 +1,7 @@
 # Meeting 
 ## Tuesday 5th February 
 
-Completed actions:
+### Miscellaneous 
 - updated solar zenith angle and time difference tests for new formatting 
 - added empirical and bayesian mask to accuracy histogram (see 190125.md)
 - added empirical mask to surface type ROC curves (see 190125.md)
@@ -9,6 +9,10 @@ Completed actions:
 - update data files to version 4.0
 - Fixed python packages on HEP
 
+![sza](http://www.hep.ph.ic.ac.uk/~kt2015/sza.png)
+
+
+### Removing NANs
 Removing NaN and outlier data improves accuracy of model from ~84% to ~86%
 
 ![Tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard1.png)
@@ -19,14 +23,22 @@ For the 3,405,785 pixels from 2018:
 - Red and Light Blue: Filtered out some of the data points
 - Green: Latest, filtered out all NaN values and added in 3 more months of data
 
-
 ![Npole](http://www.hep.ph.ic.ac.uk/~trz15/Npole2.png)
 ![Spole](http://www.hep.ph.ic.ac.uk/~trz15/Spole2.png)
-
 ![Hist1](http://www.hep.ph.ic.ac.uk/~trz15/certainty_hist3.png)
 
-![sza](http://www.hep.ph.ic.ac.uk/~kt2015/sza.png)
 
-For next week:
+### Surface type information 
+* Sun glint: calculated using view/solar geometry.  Equations in ATBD
+* Land: Based on a digital elevation model
+* inland water: Based on a digital elevation model. This is different to the one used in AATSR.  A pixel can either be land or sea.  Then, all land pixels may have the ‘inland water’ flag raised too.  Big Rivers and lakes etc are now inland water and land, including significant regions such as the Black Sea so this is something to be careful of when cloud masking.  We are looking at improving this flag to differentiate between the larger water bodies. 
+* Tidal: based on external map, shows regions which are affected by tides.  It is not calculated dynamically.
+* Snow: Based on NDSI index and is the same test that was used for AATSR.  Can mistake cloud for snow.  Equations in ATBD. 
+* Twilight: Based on solar geometry in image.  Equations in ATBD. 
+* Ocean: Based on a digital elevation model (see above)
+
+
+### For next week:
 - Decide wheter to pad out cnn inputs
 - Train new model and apply to SLSTR data 
+- Remove snow from inputs 
