added surface type information from caroline

--- a/Meeting_Notes/190205.md
+++ b/Meeting_Notes/190205.md
@@ -41,4 +41,4 @@ For the 3,405,785 pixels from 2018:
 ### For next week:
 - Decide wheter to pad out cnn inputs
 - Train new model and apply to SLSTR data 
-- Remove snow from inputs 
+- Remove snow from model inputs 
