--- a/Meeting_Notes/190205.md
+++ b/Meeting_Notes/190205.md
@@ -27,7 +27,7 @@ For the 3,405,785 pixels from 2018:
 ![Spole](http://www.hep.ph.ic.ac.uk/~trz15/Spole2.png)
 ![Hist1](http://www.hep.ph.ic.ac.uk/~trz15/certainty_hist3.png)
 
-Lines of bad data are due to most of the pixels being dark.
+Lines of bad data are due to most of the pixels being dark in the scene.
 
 
 ### Surface type information 
