--- a/Meeting_Notes/190212.md
+++ b/Meeting_Notes/190212.md
@@ -11,6 +11,9 @@ List of actions completed:
 - made the surface types exclusive. The model converges faster with this modefication.
 
 
+![run](http://www.hep.ph.ic.ac.uk/~kt2015/FFNlongrun.png)
+
+
 For next week or later: 
 - implement a new star shape 
 - polar map with averages before we submit our RI poster 
