--- a/Meeting_Notes/190212.md
+++ b/Meeting_Notes/190212.md
@@ -9,9 +9,10 @@ List of actions completed:
 - trained our current FFN for longer (approx. 4 hours) to reach an accuracy of 88% vs 86%, the network has however not yet converged
 - looked into whether we could run the train the model as a function of convergence rather than as function of the number of data points its feeding in. This functionality is not yet available with TFLearn 
 - made the surface types exclusive. The model converges faster with this modefication.
+- discussed removing dark pixels 
 
 
-![run](http://www.hep.ph.ic.ac.uk/~kt2015/FFNlongrun.png)
+![run](http://www.hep.ph.ic.ac.uk/~kt2015/longrun.png)
 
 
 For next week or later: 
