--- a/Meeting_Notes/190212.md
+++ b/Meeting_Notes/190212.md
@@ -12,7 +12,7 @@ List of actions completed:
 - discussed removing dark pixels 
 
 
-![run](http://www.hep.ph.ic.ac.uk/~kt2015/longrun.png)
+![run](http://www.hep.ph.ic.ac.uk/~kt2015/FFNlongrun.png)
 
 
 For next week or later: 
