Updated meeting notes

--- a/Meeting_Notes/190219.md
+++ b/Meeting_Notes/190219.md
@@ -6,16 +6,34 @@ List of actions completed:
 
 - Data
 
-  - removed the night flags from our dataset.
-  - downloaded more contextual data: # stars over # months.
-  - padded and interpolated the stars correctly. 
+  - removed pixels with night flags from our training/validation dataset.
+  - padded and interpolated the stars using continuous methods
 
-- FNN
-  - FFN model now reaches an average accuracy of __%.
+- FFN
+  - FFN model now reaches an average accuracy of ~88%.
   - created a new decorater: DataAnalyser which performs the previous test for any FFN model saved without having to retrain it.
 
 - CNN
-  - with correct padding and nan interpolation the CNN model is now reaching __% accuracy however applying the model to a whole image is very time consumming (> 20 min)
+  - with better data preparation the CNN model is now reaching ~80% accuracy however applying the model to a whole image is very time consumming (> 20 min)
+    - CNN's raw input array is ~ 10 GB.
+      - Issues with memory allocation, fix will require reprogramming to classify subsections of image and then rejoining rather than processing full image at once
+      - Expect this to take > 10 minutes per SLSTR file
+  - CNN is only trained on 5 months of 2018 so far
+  - Model is prone to overtraining. 
+  - Small bug where actual star input is rotated 45 degrees and reflected from the expected input, doubtful this has any real effect
+  - Output agrees with FFN ~80% of time
+  - From analysis on the 5 months of data, the FFN and CNN both classify the same pixel incorrectly ~ 6% of the time.
+
+![tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard2.png
+
+- Combined Model
+  - Process
+    - Data from SLSTR is firstly fed into the FFN
+    - Pixels where FFN prediction certainty is between 25% - 75% certain are then fed into the CNN
+    - CNN's output is then used instead of FFN for these uncertain pixels
+  - So far only tested on a couple images
+    - Typically the Combined Model mask agrees with the original FFN mask ~ 97% of the time.
+
 
 - Other
   - created a reproducibilty method to give an average and standard deviation for model accuracy when presented with the same data.
