Added missing trailing bracket

--- a/Meeting_Notes/190219.md
+++ b/Meeting_Notes/190219.md
@@ -24,7 +24,7 @@ List of actions completed:
   - Output agrees with FFN ~80% of time
   - From analysis on the 5 months of data, the FFN and CNN both classify the same pixel incorrectly ~ 6% of the time.
 
-![tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard2.png
+![tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard2.png)
 
 - Combined Model
   - Process
