--- a/Meeting_Notes/190219.md
+++ b/Meeting_Notes/190219.md
@@ -40,7 +40,8 @@ List of actions completed:
   - worked on our Research Interfaces poster.
 
 
+
 For next week or later:
 
-- implement a new star shape.
-- polar map with averages before we submit our RI poster.
+- make our test methods more general (applicable to CNN and SuperModel)
+- polar map with averages and surface types before we submit our RI poster.
