Updated Meeting Notes

--- a/Meeting_Notes/190219.md
+++ b/Meeting_Notes/190219.md
@@ -26,6 +26,9 @@ List of actions completed:
 
 ![tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard2.png)
 
+Orange: Best performing FFN so far (v7)
+Red and Blue: CNN performance
+
 - Combined Model
   - Process
     - Data from SLSTR is firstly fed into the FFN
