--- a/Meeting_Notes/190226.md
+++ b/Meeting_Notes/190226.md
@@ -20,12 +20,15 @@ Data
 
 Visualisations
 
-- Added user interface to figure to flib between masks
-- Plot average prediction values on polar map
+- Added user interface to figure to flip between masks
+- Plot average CALIOP agreement on polar map
+
+![NPole4](http://www.hep.ph.ic.ac.uk/~kt2015/NPole4.png)
+![SPole4](http://www.hep.ph.ic.ac.uk/~kt2015/SPole4.png)
 
 Test scripts
 
-- Make functions general enough for CNN and Supermodel
+- Made functions general enough for CNN and Supermodel
 
 ### For next week or later
 
