--- a/Meeting_Notes/190226.md
+++ b/Meeting_Notes/190226.md
@@ -8,27 +8,40 @@ Documentation
 
 - more documentation
 
+n/
+
 Model training and improvements
 
 - Padded contextual arrays to make images
 - Checked how  the surface types are being used by the model
+
+n/
 
 Data
 
 - Added central pixel to array
 - No longer using remove_night method on function
 
+n/
+
 Visualisations
 
 - Added user interface to figure to flip between masks
-- Plot average CALIOP agreement on polar map
+- Plotted average CALIOP agreement on polar map (see Fig. 1 and 2)
 
 ![NPole4](http://www.hep.ph.ic.ac.uk/~kt2015/NPole4.png)
+Figure 1: average CALIOP agreement over North Pole (w/o NANs and anomolous pixels)
+
 ![SPole4](http://www.hep.ph.ic.ac.uk/~kt2015/SPole4.png)
+Figure 2: average CALIOP agreement over South Pole (w/o NANs and anomolous pixels)
+
+n/
 
 Test scripts
 
 - Made functions general enough for CNN and Supermodel
+
+n/
 
 ### For next week or later
 
