--- a/Meeting_Notes/190226.md
+++ b/Meeting_Notes/190226.md
@@ -19,7 +19,6 @@ n/
 
 Data
 
-- Added central pixel to array
 - No longer using remove_night method on function
 
 n/
@@ -37,12 +36,7 @@ Figure 2: average CALIOP agreement over South Pole (w/o NANs and anomolous pixel
 
 n/
 
-Test scripts
-
-- Made functions general enough for CNN and Supermodel
-
-n/
-
 ### For next week or later
 
-- ???
+- Make test functions general enough for CNN and Supermodel
+- Add central pixel to star arrays
