Added to meeting notes

--- a/Meeting_Notes/190226.md
+++ b/Meeting_Notes/190226.md
@@ -9,8 +9,6 @@ Documentation
 - more documentation
 - finished the poster
 
-
-
 Model training and improvements
 
 - Padded contextual arrays to make images
@@ -20,19 +18,20 @@ Model training and improvements
 Decorrelation
 - Take 1% of dataset and evaluate model accuracy.
 - Shuffle all the values on the given input between measurements
-- Evaluate accuracy of model predictions for the shuffle data
+- Evaluate accuracy of model predictions for the shuffled data
 - Repeat 50 times per input
 
 ![Decorrelation](http://www.hep.ph.ic.ac.uk/~trz15/Decorrelation.png)
 
 Decorrelation for surface flags
-- Instead of shuffling, we take flip the relevent bit for each input.
+- Instead of shuffling, we flip the relevant bit for each input.
 
 ![InvertFlags](http://www.hep.ph.ic.ac.uk/~trz15/InvertFlags2.png)
 
 - Realised that some of these values are perfectly correlated. 
   - Day + Twilight = 1
   - Ocean + dry_land + inland_water = 1
+  - Implies that the bars for these surfaces cannot be evaluated separately
 - Model evaluated with twilight removed has similar performance to previous versions
 - Removal improves model simplicity / run time.
 
@@ -49,12 +48,11 @@ Visualisations
 - Plotted average CALIOP agreement on polar map (see Fig. 1 and 2)
 
 ![NPole4](http://www.hep.ph.ic.ac.uk/~kt2015/NPole4.png)
-Figure 1: average CALIOP agreement over North Pole (w/o NANs and anomolous pixels)
+Figure 1: average CALIOP agreement over North Pole (w/o NANs and anomalous pixels)
 
 ![SPole4](http://www.hep.ph.ic.ac.uk/~kt2015/SPole4.png)
-Figure 2: average CALIOP agreement over South Pole (w/o NANs and anomolous pixels)
+Figure 2: average CALIOP agreement over South Pole (w/o NANs and anomalous pixels)
 
-n/
 
 ### For next week or later
 
