--- a/Meeting_Notes/190226.md
+++ b/Meeting_Notes/190226.md
@@ -13,7 +13,7 @@ n/
 
 Model training and improvements
 
-- Padded contextual arrays to make images
+- Played with the CNN hyperparmeters (filter/kernel size, dropout)
 - Checked how  the surface types are being used by the model
 
 n/
