added new image and questions

--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -4,9 +4,18 @@
 
 ### List of actions completed
 
-- Investigated the model's accuracy and confidence of different cloud types.
-- No aerosols were picked up by CALIOP in the dataset.
+- Made the analysis functions genralised to CNN and Supermodel.
+- Investigated the models' accuracy, confidence and ROCs for different cloud types.
+- Tried to do the same with the 'clear' subtypes but no aerosols were picked up by CALIOP in the dataset.
+- Created confidence plots for surface types as well.
+
+![Ctype_accuracy](http://www.hep.ph.ic.ac.uk/~kt2015/ctype_accuracy.png)
 
 ![Cloudy_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/Cloudy_confidences.png)
 
 ![Clear_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/Clear_confidences.png)
+
+### Questions
+
+- Would it be more useful to have a table with these values in a table rather than histograms?
+- Would be worth giving the number of data points in each category?
