--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -5,7 +5,7 @@
 ### List of actions completed
 
 - Made the analysis functions genralised to CNN and Supermodel.
-- Investigated the models' accuracy, confidence and ROCs for different cloud types.
+- Investigated the models' accuracy, confidence and ROCs for different cloud types. Low accuracy for the broken clouds may be due to the time difference between CALIOP and SLSTR data.
 - Tried to do the same with the 'clear' subtypes but no aerosols were picked up by CALIOP in the dataset.
 - Created confidence plots for surface types as well.
 
