--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -15,6 +15,10 @@
 
 ![Clear_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/Clear_confidences.png)
 
+![Stype_cloudy_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/confidence_stype_cloudy.png)
+
+![Stype_clear_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/confidence_stype_clear.png)
+
 ### Questions
 
 - Would it be more useful to have a table with these values in a table rather than histograms?
