--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -5,11 +5,12 @@
 ### List of actions completed
 
 - Made the analysis functions genralised to CNN and Supermodel.
-- Investigated the models' accuracy, confidence and ROCs for different cloud types. Low accuracy for the broken clouds may be due to the time difference between CALIOP and SLSTR data.
+- Investigated the models' accuracy, confidence and ROCs for different cloud types as defined by the CALIOP file. Low accuracy for the broken clouds may be due to the time difference between CALIOP and SLSTR data.
 - Tried to do the same with the 'clear' subtypes but no aerosols were picked up by CALIOP in the dataset.
 - Created confidence plots for surface types as well.
 
 ![Ctype_accuracy](http://www.hep.ph.ic.ac.uk/~kt2015/ctype_accuracy.png)
+Accuracy is defined as the number of model outputs that agree with CALIOP over the total number of points. We are using the 1km CALIOP data where we sort through the data for which surface type bitmask is set to 2 (see 'Feature_Classification_Flags' header).
 
 ![Cloudy_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/Cloudy_confidences.png)
 
