--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -12,9 +12,11 @@
 ![Ctype_accuracy](http://www.hep.ph.ic.ac.uk/~kt2015/ctype_accuracy.png)
 Accuracy is defined as the number of model outputs that agree with CALIOP over the total number of points. We are using the 1km CALIOP data where we sort through the data for which surface type bitmask is set to 2 (see 'Feature_Classification_Flags' header).
 
-![Cloudy_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/Cloudy_confidences.png)
+![Cloudy_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/conf_ctype_cloud.png)
 
-![Clear_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/Clear_confidences.png)
+![Clear_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/conf_ctype_clear.png)
+
+![N_ctypes](http://www.hep.ph.ic.ac.uk/~kt2015/N_ctype.png)
 
 ![Stype_cloudy_confidences](http://www.hep.ph.ic.ac.uk/~kt2015/confidence_stype_cloudy.png)
 
