--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -4,7 +4,6 @@
 
 ### List of actions completed
 
-- Made the analysis functions genralised to CNN and Supermodel.
 - Investigated the models' accuracy, confidence and ROCs for different cloud types as defined by the CALIOP file. Low accuracy for the broken clouds may be due to the time difference between CALIOP and SLSTR data.
 - Tried to do the same with the 'clear' subtypes but no aerosols were picked up by CALIOP in the dataset.
 - Created confidence plots for surface types as well.
@@ -28,3 +27,4 @@ Accuracy is defined as the number of model outputs that agree with CALIOP over t
 
 - Would it be more useful to have a table with these values in a table rather than histograms?
 - Would be worth giving the number of data points in each category?
+- What aspects of the project and what plots should we discuss during our viva?
