--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -28,3 +28,9 @@ Accuracy is defined as the number of model outputs that agree with CALIOP over t
 - Would it be more useful to have a table with these values in a table rather than histograms?
 - Would be worth giving the number of data points in each category?
 - What aspects of the project and what plots should we discuss during our viva?
+
+### Next Week
+
+- Make our analysis methods work for the CNN and the supermodel.
+- Final attempt to make the CNN run better.
+- Submit our 3 page thesis plan.
