Added to meeting notes

--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -23,6 +23,21 @@ Accuracy is defined as the number of model outputs that agree with CALIOP over t
 
 ![N_stypes](http://www.hep.ph.ic.ac.uk/~kt2015/N_stype.png)
 
+- Example of model output
+![M1](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im1.png)
+![M2](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im2.png)
+![M3](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im3.png)
+![M4](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im4.png)
+![M5](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im5.png)
+![M6](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im6.png)
+
+- New polar plots
+![Npole](http://www.hep.ph.ic.ac.uk/~trz15/Npole5.png)
+![Spole](http://www.hep.ph.ic.ac.uk/~trz15/Spole5.png)
+
+- New attempts at CNN training
+![tensorboard](http://www.hep.ph.ic.ac.uk/~trz15/tensorboard3.png)
+
 ### Questions
 
 - Would it be more useful to have a table with these values in a table rather than histograms?
