--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -7,3 +7,8 @@
 - Plotted the ROC curve of the most 'sensistive' channel to the model after shuffling
 
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
+
+![broken_cloud](http://www.hep.ph.ic.ac.uk/~kt2015/brk_cld_w_time.png)
+
+![channel_sensitivity](http://www.hep.ph.ic.ac.uk/~kt2015/S5_an_sensitivity.png)
+
