changed picture name

--- a/Meeting_Notes/190305.md
+++ b/Meeting_Notes/190305.md
@@ -21,7 +21,7 @@ Accuracy is defined as the number of model outputs that agree with CALIOP over t
 
 ![conf_stype_clear](http://www.hep.ph.ic.ac.uk/~kt2015/conf_stype_clear.png)
 
-![N_stypes](http://www.hep.ph.ic.ac.uk/~kt2015/N_stype.png)
+![N_stypes](http://www.hep.ph.ic.ac.uk/~kt2015/N_stype_corrected.png)
 
 - Example of model output
 ![M1](http://www.hep.ph.ic.ac.uk/~trz15/S3A_SL_1_RBT____20180531T222736_20180531T223036_20180602T040456_0179_032_001_1800_LN2_O_NT_003.SEN3/Im1.png)
