--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -7,6 +7,7 @@
 - Plotted the ROC curve of the most 'sensistive' channel to the model after shuffling
 - Changed all the previous graph to plot AUC instead of accuracy.
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
+- Remade the number of data vs surface type (correct now, see 190305.md).
 
 ![broken_cloud](http://www.hep.ph.ic.ac.uk/~kt2015/brk_cld_w_time.png)
 
