--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -8,7 +8,7 @@
 - Changed all the previous graph to plot AUC instead of accuracy.
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
 - Remade the number of data vs surface type (correct now, see 190305.md).
-- Genralised analysis functions for CNN and superModel
+- Genralised analysis functions for CNN and SuperModel.
 
 ![broken_cloud](http://www.hep.ph.ic.ac.uk/~kt2015/brk_cld_w_time.png)
 
