--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -4,8 +4,8 @@
 
 ### List of actions completed
 
-- Plotted the ROC curve of the most 'sensistive' channel to the model after shuffling, currently working on data planing.
-- Changed all the previous graph to plot AUC instead of accuracy.
+- Plotted the ROC curve of the most 'sensitive' channel to the model after shuffling, currently working on data planing.
+- Changed all the previous graphs to plot AUC instead of accuracy.
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
 - Remade the number of data vs surface type (correct now, see 190305.md).
 - Genralised analysis functions for CNN and SuperModel.
