--- a/Meeting_Notes/190312.md
+++ b/Meeting_Notes/190312.md
@@ -9,6 +9,8 @@
 - Plotted the accuracy as a function of time for the low broken cumulus (there was not enough data to evaluate the AUC)
 - Remade the number of data vs surface type (correct now, see 190305.md).
 - Genralised analysis functions for CNN and SuperModel.
+- Downloaded Bayesian model confidences, less than 50% of the data points have this pararemter (approx. 900 000 data points)
+
 
 ![broken_cloud](http://www.hep.ph.ic.ac.uk/~kt2015/brk_cld_w_time.png)
 
